tests/snapshots/error_examples_snapshots__auto_discovered_example_templates_errors_parsing_eq_wrong_element_count.snap
---
source: tests/error_examples_snapshots.rs
expression: "format!(\"{}\", e)"
---
Tag error: must have exactly 2 elements to compare @ example-templates/errors/parsing-eq-wrong-element-count.yaml:2:7 (errno: ERR_4003)
  -> use format: [value1, value2]

   1 | # !$eq with only one element instead of two
   2 | test: !$eq ["single_value"]

   example:
   !$eq ["{{env}}", "production"]
   For more info: iidy explain ERR_4003
