tests/snapshots/error_examples_snapshots__auto_discovered_example_templates_errors_parsing_include_invalid_format.snap
---
source: tests/error_examples_snapshots.rs
expression: "format!(\"{}\", e)"
---
Tag error: invalid format - must be string variable name @ example-templates/errors/parsing-include-invalid-format.yaml:2:7 (errno: ERR_4002)
  -> use string variable name

   1 | # !$ variable include with invalid format (number instead of string or mapping with path)
   2 | test: !$ 123

   example:
   !$ variable_name
   For more info, run: iidy explain ERR_4002
