tests/snapshots/error_examples_snapshots__auto_discovered_example_templates_errors_parsing_let_not_mapping.snap
---
source: tests/error_examples_snapshots.rs
expression: "format!(\"{}\", e)"
---
Tag error: must be a mapping with variable bindings and 'in' field @ example-templates/errors/parsing-let-not-mapping.yaml:2:7 (errno: ERR_4003)
  -> use format: {var1: value1, var2: value2, in: expression}

   1 | # !$let with string instead of mapping
   2 | test: !$let "invalid"

   example:
   !$let
     var1: value1
     var2: value2
     in: "{{var1}}-{{var2}}"
   For more info: iidy explain ERR_4003
