tests/snapshots/error_examples_snapshots__auto_discovered_example_templates_errors_parsing_maplisttohash_not_mapping.snap
---
source: tests/error_examples_snapshots.rs
expression: "format!(\"{}\", e)"
---
Tag error: must be a mapping with 'items' and 'template' fields @ example-templates/errors/parsing-maplisttohash-not-mapping.yaml:2:9 (errno: ERR_4003)
  -> use format: {items: array, template: mapping_template}

   1 | # !$mapListToHash with string instead of mapping
   2 | result: !$mapListToHash "invalid"

   example:
   !$mapListToHash
     items: [{"key": "a", "value": 1}, {"key": "b", "value": 2}]
     keyPath: key
     valuePath: value
   For more info: iidy explain ERR_4003
