tests/snapshots/error_examples_snapshots__auto_discovered_example_templates_errors_parsing_merge_not_sequence.snap
---
source: tests/error_examples_snapshots.rs
expression: "format!(\"{}\", e)"
---
Tag error: must be a sequence of objects to merge @ example-templates/errors/parsing-merge-not-sequence.yaml:2:7 (errno: ERR_4002)
  -> use format: [object1, object2, ...]

   1 | # !$merge with string instead of sequence  
   2 | test: !$merge "invalid"

   example:
   !$merge
     - {key1: value1}
     - {key2: value2}
     - {key3: value3}
   For more info, run: iidy explain ERR_4002
